# app/Http/Controllers/UserController.php
@@ -99,4 +99,76 @@ class UserController extends Controller {
         $id = $request->query("typeId")  ?? 0;
         return $this->userService->getUserTypeList($id);
     }
+
+    /**
+     * @OA\Put(
+     *     path="/auth/users/logout",
+     *     tags={"使用者相關"},
+     *     summary="使用者登出",
+     *     description="",
+     *     security={{"apiAuth":{}}},
+     *      @OA\Response(
+     *          response=200,
+     *          description="{'data':{},'msg':'succsess'}",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="{'data':{},'msg':'error msg'}",
+     *      )
+     *     )
+     */
+    public function logout() {
+        auth()->logout();
+        return UtilResponse::successResponse("success");
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/auth/users/refresh",
+     *     tags={"使用者相關"},
+     *     summary="使用者更新jwt",
+     *     description="",
+     *     security={{"apiAuth":{}}},
+     *      @OA\Response(
+     *          response=200,
+     *          description="{'data':{},'msg':'succsess'}",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="{'data':{},'msg':'error msg'}",
+     *      )
+     *     )
+     */
+    public function refresh() {
+        $data = [
+            'access_token' => auth()->refresh(),
+            'token_type' => 'bearer',
+            'expires_in' => auth()->factory()->getTTL() * 60,
+            'user' => auth()->user()
+        ];
+        return UtilResponse::successResponse("success", $data);
+    }
+
+
+    /**
+     * @OA\Get(
+     *     path="/auth/users/user-info",
+     *     tags={"使用者相關"},
+     *     summary="取得使用者資訊",
+     *     description="",
+     *     security={{"apiAuth":{}}},
+     *      @OA\Response(
+     *          response=200,
+     *          description="{'data':{},'msg':'succsess'}",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="{'data':{},'msg':'error msg'}",
+     *      )
+     * )
+     */
+    public function getUserInfo() {
+        $data = ["dataInfo" => auth()->user()];
+        return UtilResponse::successResponse("success", $data);
+    }
 }
